--- a/stories/de/0231_wetterbuch_slides.html
+++ b/stories/de/0231_wetterbuch_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/05.jpg" /></p>
-<p>Es ist wolkig.</p>
+<p>Es ist bewölkt.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/08.jpg" /></p>
-<p>Dort is Donner.</p>
+<p>Es donnert.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="wetterbuch-1">Wetterbuch</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Veranschaulichung:</strong> Sandra McDougall<br> <strong>Übersetzung:</strong> Ryley Dye-Hogan<br> <strong>Sprache:</strong> Deutsch<br>
+<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Veranschaulichung:</strong> Sandra McDougall<br> <strong>Übersetzung:</strong> Anna Westpfahl<br> <strong>Sprache:</strong> Deutsch<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
