--- a/stories/de/0271_zwei.html
+++ b/stories/de/0271_zwei.html
@@ -49,7 +49,7 @@ Carole Bloch<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/02.jpg" /></p>
 
-<p>Zwei kleine Hände zu halten.</p>
+<p>Zwei kleine Hände zum Halten.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -61,7 +61,7 @@ Carole Bloch<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/04.jpg" /></p>
 
-<p>Zwei kleinen Füße zu treten.</p>
+<p>Zwei kleine Füße zum Schießen.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -73,7 +73,7 @@ Carole Bloch<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/06.jpg" /></p>
 
-<p>Zwei kleine Augen zu sehen.</p>
+<p>Zwei kleine Augen zum Sehen.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -85,7 +85,7 @@ Carole Bloch<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/08.jpg" /></p>
 
-<p>Zwei kleine Ohren zu hören.</p>
+<p>Zwei kleine Ohren zum Hören.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -97,7 +97,7 @@ Carole Bloch<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/10.jpg" /></p>
 
-<p>Und zwei liebevolle Armen zu umarmen!</p>
+<p>Und zwei liebende Arme zum Umarmen.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -107,7 +107,7 @@ Carole Bloch<br>Deutsch</div><div class="pagebreak">
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Carole Bloch<br /><strong>Veranschaulichung:</strong> Richard MacIntosh<br /><strong>Übersetzung:</strong> Ryley Dye-Hogan<br /><strong>Sprache:</strong> Deutsch</p>
+<p><strong>Text:</strong> Carole Bloch<br /><strong>Veranschaulichung:</strong> Richard MacIntosh<br /><strong>Übersetzung:</strong> Anna Westpfahl<br /><strong>Sprache:</strong> Deutsch</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/two">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
