--- a/stories/es/0089_khalai-le-habla-a-las-plantas.html
+++ b/stories/es/0089_khalai-le-habla-a-las-plantas.html
@@ -77,7 +77,7 @@ Ursula Nafula<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
 
-<p>En la escuela, Khalai le habla a un árbol que está en el medio del recinto. “Por favor árbol, crece con ramas muy grandes para que podamos leer bajo tu sombra.”</p>
+<p>En la escuela, Khalai le habla a un árbol que está en medio del recinto. “Por favor árbol, crece con ramas muy grandes para que podamos leer bajo tu sombra.”</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
