--- a/stories/es/0262_magozwe_slides.html
+++ b/stories/es/0262_magozwe_slides.html
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/12.jpg" /></p>
-<p>Cuando Magozwe cumplió alrededor de diez años, Thomas le regaló un nuevo libro de cuentos. Era la historia de un niño de una aldea que creció y se convirtió en un famoso jugador de fútbol. Thomas le leyó esa historia a Magozwe en muchas ocasiones, hasta que un día le dijo, &quot;creo que ya es tiempo que vayas a la escuela y aprendas a leer. ¿Qué te parece?&quot; Thomas le explicó que conocía un lugar donde los niños podían vivir e ir a la escuela.</p>
+<p>Cuando Magozwe cumplió alrededor de diez años, Thomas le regaló un nuevo libro de cuentos. Era la historia de un niño de una aldea que creció y se convirtió en un famoso jugador de fútbol. Thomas le leyó esa historia a Magozwe en muchas ocasiones, hasta que un día le dijo, &quot;Creo que ya es tiempo que vayas a la escuela y aprendas a leer. ¿Qué te parece?&quot; Thomas le explicó que conocía un lugar donde los niños podían vivir e ir a la escuela.</p>
 <center>
 <strong>11</strong>
 </center>
