--- a/stories/pl/0291_słowa-siostry-vusi.html
+++ b/stories/pl/0291_słowa-siostry-vusi.html
@@ -105,7 +105,7 @@ Nina Orange<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
 
-<p>„Coś Ty narobiła?” - krzyczał Vusi. „To był prezent dla mojej siostry. Robotnicy dali mi ją, bo złamali kij od zbieraczy owoców. Zbieracze owoców dali mi kij bo zbili jajko na tort na ślub mojej siostry. A teraz nie ma ani jajka, ani tortu, ani prezentu. „Co powie moja siostra?”</p>
+<p>„Coś Ty narobiła?” - krzyczał Vusi. „To był prezent dla mojej siostry. Robotnicy dali mi ją, bo złamali kij od zbieraczy owoców. Zbieracze owoców dali mi kij bo zbili jajko na tort na ślub mojej siostry. A teraz nie ma ani jajka, ani tortu, ani prezentu. Co powie moja siostra?”</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
