--- a/stories/ur/0030_احساسات.html
+++ b/stories/ur/0030_احساسات.html
@@ -49,40 +49,40 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>اردو</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/02.jpg" /></p>
 
-<p>میرا دل بہت سی چیزیں محسوس کرتا ہے۔</p>
+<p>میرا دل بہت سی چیزیں محسوس کرتا ہے</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/03.jpg" /></p>
 
-<p>جب میری نانی شام میں کہانیوں کو بتاتی ہے تو مجھے خوشی محسوس ہوتی ہے۔</p>
+<p>جب میری نانی شام میں کہانیاں سُناتی ہیں تو مجھے خوشی محسوس ہوتی ہے.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/04.jpg" /></p>
 
-<p>جب میں اپنے دوست کے ساتھ کھیلتا ہوں تو مجھے بیوقوفی محسوس ہوتی ہے۔</p>
+<p>جب میں اپنے دوست کے ساتھ کھیلتا ہوں تو میں پاگل پن محسوس کرتا ہوں</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/05.jpg" /></p>
 
-<p>مجھے برا لگتا ہے جب میرے والد کہتے ھیں ہے کہ ان کے پاس رقم نہیں ہے۔</p>
+<p>مجھے برا محسوس ہوتا ہے جب میرے والد بتاتے ہیں کہ ان کے پاس پیسے نہیں ہیں</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/06.jpg" /></p>
 
-<p>جب میری ماں نے مجھے گلے لگاتی ہے تو مجھے لگتا ہے کہ کوئ مجھ سے پیار کرتا ہوں۔</p>
+<p>جب میری ماں مجھے گلے سے لگاتی ہے تو میں پیار محسوس کرتاہوں</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrations:</strong> Kathy Arbuckle<br /><strong>Translation:</strong> Samrina Sana<br /><strong>Language:</strong> Urdu</p>
+<p><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrations:</strong> Kathy Arbuckle<br /><strong>Translation:</strong> Shahid Abrar-ul-Hassan<br /><strong>Language:</strong> Urdu</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/feelings">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
