--- a/stories/ur/0030_احساسات_slides.html
+++ b/stories/ur/0030_احساسات_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/02.jpg" /></p>
-<p>میرا دل بہت سی چیزیں محسوس کرتا ہے۔</p>
+<p>میرا دل بہت سی چیزیں محسوس کرتا ہے</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/03.jpg" /></p>
-<p>جب میری نانی شام میں کہانیوں کو بتاتی ہے تو مجھے خوشی محسوس ہوتی ہے۔</p>
+<p>جب میری نانی شام میں کہانیاں سُناتی ہیں تو مجھے خوشی محسوس ہوتی ہے.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/04.jpg" /></p>
-<p>جب میں اپنے دوست کے ساتھ کھیلتا ہوں تو مجھے بیوقوفی محسوس ہوتی ہے۔</p>
+<p>جب میں اپنے دوست کے ساتھ کھیلتا ہوں تو میں پاگل پن محسوس کرتا ہوں</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/05.jpg" /></p>
-<p>مجھے برا لگتا ہے جب میرے والد کہتے ھیں ہے کہ ان کے پاس رقم نہیں ہے۔</p>
+<p>مجھے برا محسوس ہوتا ہے جب میرے والد بتاتے ہیں کہ ان کے پاس پیسے نہیں ہیں</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/06.jpg" /></p>
-<p>جب میری ماں نے مجھے گلے لگاتی ہے تو مجھے لگتا ہے کہ کوئ مجھ سے پیار کرتا ہوں۔</p>
+<p>جب میری ماں مجھے گلے سے لگاتی ہے تو میں پیار محسوس کرتاہوں</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <h2 id="احساسات-1">احساسات</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Kathy Arbuckle<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Kathy Arbuckle<br> <strong>Translation:</strong> Shahid Abrar-ul-Hassan<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
