--- a/stories/ur/0342_سزا.html
+++ b/stories/ur/0342_سزا.html
@@ -49,89 +49,89 @@ Adelheid Marie Bwire<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
 
-<p>ایک دن، ماما نے بہت پھل لیا۔</p>
+<p>ایک دن امی بہت سے پھل لائیں ۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
 
-<p>“ہم کب کچھ پھل سکتے ہیں؟” ہم نے پوچھا۔ ماما کا کہنا ہے کہ “آج ہم پھل کھائیں گے۔”</p>
+<p>ہم کچھ پھل کب کھا سکتے ہیں؟ ہم نے پوچھا ۔ ہم آج رات کو پھل کھائیں گے ۔ امی نے کہا ۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
 
-<p>میرا بھائی رحیم لالچی ہے۔ وہ سب پھل چکھاتا ہے۔ وہ بہت کھاتا ہے۔</p>
+<p>میرا بھائی رحیم لالچی ہے ۔ وہ سب پھل چکھتا ہے۔ وہ بہت پھل کھاتا ہے ۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
 
-<p>“رحیم نے کیا کیا دیکھو!” میرے چھوٹے بھائی کو۔ “رحیم شرارتی اور خود مختار ہے،” میں کہتا ہوں۔</p>
+<p>ریکھو رحیم نے کیا کیا؟ میرا چھوٹا بھائی چلایا ۔ رحیم بہت شرارتی اور خود غر ض ہے ۔ میں نے کہا ۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/06.jpg" /></p>
 
-<p>ماں رحیم سے ناراض ہیں</p>
+<p>امی رحیم سے ناراض ہیں ۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
 
-<p>ہم رحیم سے ناراض ہیں۔ لیکن رحیم افسوس نہیں ہے۔</p>
+<p>ہم بھی رحیم سے ناراض ہیں لیکن رحیم تھوڑا سا بھی شرمندہ نہیں ہے ۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
 
-<p>“کیا تم رحیم کو سزا نہیں دے رہے ہو؟” تھوڑا بھائی سے پوچھتا ہے</p>
+<p>کیا تم رحیم کو سزا نہیں دے رہے؟ چھوٹے بھائی نے پوچھا ۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
 
-<p>ماں نے خبردار کیا “رحیم، جلد ہی آپ کو معافی مانگیں گے۔”</p>
+<p>ماں نے خبردار کیا “رحیم، جلد ہی آپ سے معافی مانگے گا۔.”</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/10.jpg" /></p>
 
-<p>رحیم بیمار محسوس کرنے لگتے ہیں۔</p>
+<p>رحیم بیمار محسوس کرنے لگتا ہے</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
 
-<p>رحیم کا کہنا ہے کہ “میرا پیٹ بہت گستاخ ہے۔”</p>
+<p>میرے پیٹ میں درد ہے ۔ رحیم چلایا ۔</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
 
-<p>ماں جانتا تھا کہ یہ ہوگا۔ پھل رحیم کو سزا دے رہا ہے!</p>
+<p>امی جانتی تھیں کہ یہ ہو گا ۔ پھل رحیم کو سزا دے رہے ہیں ۔</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
 
-<p>بعد میں، رحیم ہمیں افسوس ہے۔ “میں کبھی کبھی لالچی نہیں کروں گا،” انہوں نے وعدہ کیا۔ اور ہم سب اس پر یقین رکھتے ہیں۔</p>
+<p>بعد میں رحیم معافی مانگی ۔ میں کبھی دوبارہ لالچ نہیں کروں گا اُس نے وعدہ کیا ۔ اور ہم سب نے اُس پر بھروسہ کر لیا ۔</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Adelheid Marie Bwire<br /><strong>Illustrations:</strong> Melany Pietersen<br /><strong>Translation:</strong> Samrina Sana<br /><strong>Language:</strong> Urdu</p>
+<p><strong>Text:</strong> Adelheid Marie Bwire<br /><strong>Illustrations:</strong> Melany Pietersen<br /><strong>Translation:</strong> Shahid Abrar-ul-Hassan<br /><strong>Language:</strong> Urdu</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/punishment">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
