--- a/stories/de/0231_wetterbuch.html
+++ b/stories/de/0231_wetterbuch.html
@@ -70,7 +70,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Deutsch</div><div class="pag
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/05.jpg" /></p>
 
-<p>Es ist wolkig.</p>
+<p>Es ist bewölkt.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Deutsch</div><div class="pag
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/08.jpg" /></p>
 
-<p>Dort is Donner.</p>
+<p>Es donnert.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -103,7 +103,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Deutsch</div><div class="pag
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Veranschaulichung:</strong> Sandra McDougall<br /><strong>Übersetzung:</strong> Ryley Dye-Hogan<br /><strong>Sprache:</strong> Deutsch</p>
+<p><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Veranschaulichung:</strong> Sandra McDougall<br /><strong>Übersetzung:</strong> Anna Westpfahl<br /><strong>Sprache:</strong> Deutsch</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/weather-book">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
