--- a/stories/de/0271_zwei_slides.html
+++ b/stories/de/0271_zwei_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/02.jpg" /></p>
-<p>Zwei kleine Hände zu halten.</p>
+<p>Zwei kleine Hände zum Halten.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -114,7 +114,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/04.jpg" /></p>
-<p>Zwei kleinen Füße zu treten.</p>
+<p>Zwei kleine Füße zum Schießen.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -131,7 +131,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/06.jpg" /></p>
-<p>Zwei kleine Augen zu sehen.</p>
+<p>Zwei kleine Augen zum Sehen.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -148,7 +148,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/08.jpg" /></p>
-<p>Zwei kleine Ohren zu hören.</p>
+<p>Zwei kleine Ohren zum Hören.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -165,7 +165,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/10.jpg" /></p>
-<p>Und zwei liebevolle Armen zu umarmen!</p>
+<p>Und zwei liebende Arme zum Umarmen.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -182,7 +182,7 @@
 <section class="slide level1">
 
 <h2 id="zwei-1">Zwei</h2>
-<strong>Text:</strong> Carole Bloch<br> <strong>Veranschaulichung:</strong> Richard MacIntosh<br> <strong>Übersetzung:</strong> Ryley Dye-Hogan<br> <strong>Sprache:</strong> Deutsch<br>
+<strong>Text:</strong> Carole Bloch<br> <strong>Veranschaulichung:</strong> Richard MacIntosh<br> <strong>Übersetzung:</strong> Anna Westpfahl<br> <strong>Sprache:</strong> Deutsch<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
