--- a/stories/es/0089_khalai-le-habla-a-las-plantas_slides.html
+++ b/stories/es/0089_khalai-le-habla-a-las-plantas_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
-<p>En la escuela, Khalai le habla a un árbol que está en el medio del recinto. &quot;Por favor árbol, crece con ramas muy grandes para que podamos leer bajo tu sombra.&quot;</p>
+<p>En la escuela, Khalai le habla a un árbol que está en medio del recinto. &quot;Por favor árbol, crece con ramas muy grandes para que podamos leer bajo tu sombra.&quot;</p>
 <center>
 <strong>5</strong>
 </center>
