--- a/stories/es/0095_zama-es-genial.html
+++ b/stories/es/0095_zama-es-genial.html
@@ -49,7 +49,7 @@ Michael Oguttu<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/02.jpg" /></p>
 
-<p>Mi hermano pequeño se despierta muy tarde. Yo despierto temprano, ¡Porque soy genial!</p>
+<p>Mi hermano pequeño se despierta muy tarde. Yo despierto temprano, ¡porque soy genial!</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Michael Oguttu<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/13.jpg" /></p>
 
-<p>Todos los días hago estas cosas buenas. Pero lo que más me gusta hacer es ¡Jugar, jugar y jugar!</p>
+<p>Todos los días hago estas cosas buenas. Pero lo que más me gusta hacer es ¡jugar, jugar y jugar!</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
