--- a/stories/es/0095_zama-es-genial_slides.html
+++ b/stories/es/0095_zama-es-genial_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/02.jpg" /></p>
-<p>Mi hermano pequeño se despierta muy tarde. Yo despierto temprano, ¡Porque soy genial!</p>
+<p>Mi hermano pequeño se despierta muy tarde. Yo despierto temprano, ¡porque soy genial!</p>
 <center>
 <strong>1</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/13.jpg" /></p>
-<p>Todos los días hago estas cosas buenas. Pero lo que más me gusta hacer es ¡Jugar, jugar y jugar!</p>
+<p>Todos los días hago estas cosas buenas. Pero lo que más me gusta hacer es ¡jugar, jugar y jugar!</p>
 <center>
 <strong>12</strong>
 </center>
