--- a/stories/es/0262_magozwe.html
+++ b/stories/es/0262_magozwe.html
@@ -119,7 +119,7 @@ Lesley Koyi<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/12.jpg" /></p>
 
-<p>Cuando Magozwe cumplió alrededor de diez años, Thomas le regaló un nuevo libro de cuentos. Era la historia de un niño de una aldea que creció y se convirtió en un famoso jugador de fútbol. Thomas le leyó esa historia a Magozwe en muchas ocasiones, hasta que un día le dijo, “creo que ya es tiempo que vayas a la escuela y aprendas a leer. ¿Qué te parece?” Thomas le explicó que conocía un lugar donde los niños podían vivir e ir a la escuela.</p>
+<p>Cuando Magozwe cumplió alrededor de diez años, Thomas le regaló un nuevo libro de cuentos. Era la historia de un niño de una aldea que creció y se convirtió en un famoso jugador de fútbol. Thomas le leyó esa historia a Magozwe en muchas ocasiones, hasta que un día le dijo, “Creo que ya es tiempo que vayas a la escuela y aprendas a leer. ¿Qué te parece?” Thomas le explicó que conocía un lugar donde los niños podían vivir e ir a la escuela.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
