--- a/stories/it/0262_magozwe.html
+++ b/stories/it/0262_magozwe.html
@@ -49,7 +49,7 @@ Lesley Koyi<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/02.jpg" /></p>
 
-<p>Nella affollata città di Nairobi, lontano da un’amorevole vita in casa, viveva un gruppo di ragazzi senza tetto. Vivevano alla giornata. Ogni mattina, impacchettavano i loro materassi dopo aver dormito sui freddi pavimenti. Per scaldarsi un po’, accendevano fuochi nei bidoni nella spazzatura. In questo gruppo di ragazzi c’era anche Magozwe. Lui era il più giovane.</p>
+<p>Nella affollata città di Nairobi, lontano da un’amorevole vita in casa, viveva un gruppo di ragazzi senza tetto. Vivevano alla giornata. Ogni mattina, impacchettavano i loro materassi dopo aver dormito sui freddi pavimenti. Per scaldarsi un po’, accendevano fuochi nei bidoni della spazzatura. In questo gruppo di ragazzi c’era anche Magozwe. Lui era il più giovane.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
