--- a/stories/ur/0002_جانوروں-کو-دیکھو.html
+++ b/stories/ur/0002_جانوروں-کو-دیکھو.html
@@ -49,61 +49,61 @@ Jenny Katz<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/02.jpg" /></p>
 
-<p>جانوروں کو دیکھو۔</p>
+<p>جانوروں کو دیکھو</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/03.jpg" /></p>
 
-<p>گائے کا کہنا ہے کہ، “مو۔”</p>
+<p>‘گائے کہتی ہے ’مو</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/04.jpg" /></p>
 
-<p>بکری کا کہنا ہے کہ “مہ، مہ۔”</p>
+<p>بکری میں میں کرتی ہے</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/05.jpg" /></p>
 
-<p>گھوڑے کا کہنا ہے کہ، “قریب۔”</p>
+<p>گھوڑا ہینگتا ہے</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/06.jpg" /></p>
 
-<p>سور کہتے ہیں، “گریج”۔</p>
+<p>سور گریجتا ہے</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/07.jpg" /></p>
 
-<p>چکن کا کہنا ہے کہ “کلک۔”</p>
+<p>مرغی کلک کرتی ہے</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/08.jpg" /></p>
 
-<p>کتے کا کہنا ہے کہ “Woof۔”</p>
+<p>کتا بھائو کرتا ہے</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/09.jpg" /></p>
 
-<p>کسان کہتے ہیں، “شہ!”</p>
+<p>کسان شیو شیو کرتا ہے</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Jenny Katz<br /><strong>Illustrations:</strong> Sandy Campbell<br /><strong>Translation:</strong> Samrina Sana<br /><strong>Language:</strong> Urdu</p>
+<p><strong>Text:</strong> Jenny Katz<br /><strong>Illustrations:</strong> Sandy Campbell<br /><strong>Translation:</strong> Shahid Abrar-ul-Hassan<br /><strong>Language:</strong> Urdu</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/look-animals">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
