--- a/stories/ur/0009_میری-بلی-کہاں-ہے؟_slides.html
+++ b/stories/ur/0009_میری-بلی-کہاں-ہے؟_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/05.jpg" /></p>
-<p>سوفی کے پیچھے کیا ہے؟</p>
+<p>کیا یہ صوفے کے پیچھے ہے؟</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/06.jpg" /></p>
-<p>کیا بن کے پیچھے ہے؟</p>
+<p>کیا یہ ٹوکری کے آگے ہے؟</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/07.jpg" /></p>
-<p>یہ ٹوکری کے اندر ہے؟</p>
+<p>کیا یہ ٹوکری کے اندر ہے؟</p>
 <center>
 <strong>6</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/09.jpg" /></p>
-<p>یہ رہا!</p>
+<p>!یہ رہی</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="میری-بلی-کہاں-ہے-1">میری بلی کہاں ہے؟</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Bronwen Heath<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Bronwen Heath<br> <strong>Translation:</strong> Shahid Abrar-ul-Hassan<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
