--- a/stories/ur/0027_فیصلہ_slides.html
+++ b/stories/ur/0027_فیصلہ_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/02.jpg" /></p>
-<p>میرا گاؤں بہت سے مسائل تھا۔ ہم نے ایک نل سے پانی نکالنے کے لئے ایک لمبی لائن بنائی۔</p>
+<p>میرے گاوں میں بہت سے مسائل تھے ۔ ہم نے ایک نل سے پانی بھرنے کے لیے ایک لمبی قطار بنائی</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/03.jpg" /></p>
-<p>ہم نے دوسروں کی طرف سے عطیہ کھانے کی انتظار کی۔</p>
+<p>ہم نے دوسروں کی طرف سے عطیہ کیے گئے کھانے کا انتظار کیا</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/04.jpg" /></p>
-<p>چوروں کی وجہ سے ہم نے اپنے گھروں کو بند کر دیا۔</p>
+<p>چوروں کی وجہ سے ہم نے اپنے گھروں کو بند کر دیا.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/05.jpg" /></p>
-<p>بہت سے بچے اسکول سے گزر گئے ہیں۔</p>
+<p>بہت سے بچے سکول سے نکال دیے گئے</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/06.jpg" /></p>
-<p>نوجوان لڑکیوں نے دیگر گاؤں میں نوکرانی کے طور پر کام کیا۔</p>
+<p>نوجوان لڑکیوں نے دیگر گاؤں میں نوکرانی کے طور پر کام کیا.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/07.jpg" /></p>
-<p>نوجوان لڑکوں نے گاؤں کے ارد گرد گھوم لیا جبکہ دوسروں نے لوگوں کے کھیتوں پر کام کیا۔</p>
+<p>نو جوان لڑکے گاوں کے ارد گردگھومےجبکہ باقی لو گوں نے کھیت میں کام کیا</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/08.jpg" /></p>
-<p>جب ہوا دھماکے ہوئے تو، فضلہ کاغذ درخت اور باڑ پر لٹکا۔</p>
+<p>جب ہو ا چلی فالتو کاغذ درختوں اور جنگلوں پر لٹک گئے</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/09.jpg" /></p>
-<p>لوگوں کو ٹوٹے ہوئے گلاس سے کاٹ دیا گیا تھا جو بے غریب طور پر پھینک دیا گیا تھا۔</p>
+<p>بے احتیاطی سے پھینکے گئے ٹوٹے کانچ کی وجہ سے لو گوں کو چیر آگئے</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/10.jpg" /></p>
-<p>پھر ایک دن، خشک خشک اور ہمارے کنٹینر خالی تھے۔</p>
+<p>اور ایک دن نل سوکھ گیا اور ہمارے برتن خالی ہو گئے</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/11.jpg" /></p>
-<p>میرے باپ نے گھر سے گھر جانے کے لئے گھر سے گاؤں کے اجلاس میں شرکت کرنے سے کہا۔</p>
+<p>میرے باپ نے گھر سے گھر جانے کے لئے گھر سے گاؤں کے اجلاس میں شرکت کرنے سے کہا.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/12.jpg" /></p>
-<p>لوگ بڑے درخت کے نیچے جمع ہوئے اور سنتے تھے۔</p>
+<p>لوگ بڑے درخت کے نیچے جمع ہوئے اور اُنہوں نے سُنا</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/13.jpg" /></p>
-<p>میرے والد کھڑا ہوگئے اور کہا، &quot;ہمیں اپنی مشکلات کو حل کرنے کے لئے مل کر کام کرنے کی ضرورت ہے۔&quot;</p>
+<p>میرے والد کھڑے ہوگئے اور کہا، &quot;ہمیں اپنی مشکلات کو حل کرنے کے لئے مل کر کام کرنے کی ضرورت ہے.&quot;</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/14.jpg" /></p>
-<p>ایک درخت ٹنکر پر بیٹھ کر آٹھ سالہ جوڈو نے کہا، &quot;میں صفائی کے ساتھ مدد کر سکتا ہوں۔&quot;</p>
+<p>ایک درخت پر بیٹھ کر آٹھ سالہ جمعہ نے کہا، &quot;میں صفائی کے ساتھ مدد کر سکتا ہوں.&quot;</p>
 <center>
 <strong>13</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/15.jpg" /></p>
-<p>ایک عورت نے کہا، &quot;خواتین کھانے میں اضافہ کرنے میں شمولیت اختیار کرسکتے ہیں۔&quot;</p>
+<p>ایک عورت نے کہا، &quot;خواتین کھانے میں اضافہ کرنے میں شمولیت اختیار کرسکتی ہیں.&quot;</p>
 <center>
 <strong>14</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/16.jpg" /></p>
-<p>ایک اور آدمی کھڑا ہوا اور کہا، &quot;مرد ٹھیک ہو جاتے ہیں۔&quot;</p>
+<p>ایک اور آدمی کھڑا ہو ا اور کہا ٗمردکنواں کھودیں گےٗ</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
-<p>ہم سب نے ایک آواز سے زور دیا، &quot;ہمیں اپنی زندگی کو تبدیل کرنا ضروری ہے۔&quot; اس دن سے ہم نے اپنی مسائل کو حل کرنے کے ساتھ مل کر کام کیا۔</p>
+<p>ہم سب نے ایک آواز سے کہا، &quot;ہمیں اپنی زندگی کو تبدیل کرنا ہوگا&quot; اس دن سے ہم نے اپنی مسائل کو حل کرنے کے ساتھ مل کر کام کیا.</p>
 <center>
 <strong>16</strong>
 </center>
@@ -241,7 +241,7 @@
 <section class="slide level1">
 
 <h2 id="فیصلہ-1">فیصلہ</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Vusi Malindi<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Vusi Malindi<br> <strong>Translation:</strong> Shahid Abrar-ul-Hassan<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
