--- a/stories/ur/0052_سمب-گیورائر.html
+++ b/stories/ur/0052_سمب-گیورائر.html
@@ -49,117 +49,120 @@ Rukia Nantale<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
 
-<p>جب سمب گیورائر کی ماں مر گئی تو وہ بہت اداس تھے۔ سمبیگائر کے والد نے اپنی بیٹی کی دیکھ بھال کرنے کے لئے اپنی پوری کوشش کی۔ آہستہ آہستہ، انہوں نے سمب گیورائر کی ماں کے بغیر، دوبارہ خوش محسوس کرنے کے لئے سیکھا۔ ہر روز انہوں نے بیٹھ کر دن کے بارے میں بات کی۔ ہر شام انہوں نے ایک ساتھ رات کا کھانا بنایا۔ انہوں نے برتن دھوئے کے بعد، سمب گیورائر کے والد نے اسے گھر کے کام کے ساتھ مدد کی۔</p>
+<p>جب سمب گیورائر کی ماں مر گئی تو وہ بہت اداس تھی. سمبیگائر کے والد نے اپنی بیٹی کی دیکھ بھال کرنے کے لئے اپنی پوری کوشش کی. آہستہ آہستہ، انہوں نے سمب گیورائر کی ماں کے بغیر، دوبارہ خوشی محسوس کرنے کی کو شش کی. ہر روز انہوں نے بیٹھ کر دن کے بارے میں بات کی. ہر شام انہوں نے ایک ساتھ رات کا کھانا بنایا. انہوں نے برتن دھونے کے بعد، سمب گیورائر کے والد نے اسے گھر کے کام میں اُس کی  مدد کی.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
 
-<p>ایک دن، سمبیگائر کے والد معمول کے بعد بعد میں گھر آ گئے۔ “آپ میرے بچے کہاں ہیں؟” انہوں نے کہا۔ سمبیگائر اپنے باپ کے پاس گیا۔ اس نے ابھی تک روک دیا جب وہ نے دیکھا کہ وہ عورت کا ہاتھ رکھتی تھی۔ “میں آپ کو کسی خاص، میرے بچے سے ملنا چاہتا ہوں، یہ انیتا ہے،” انہوں نے مسکرا کر کہا۔</p>
+<p>ایک دن، سمبیگائر کے والد معمول سے ہٹ کر گھر آ گئے. اُنہوں نے کہا کہ “ میرے بچے تم کہاں ہو؟”  سمبیگائر اپنے باپ کی طرف بھاگی۔ وہ اپنے باپ کا ہاتھ کسی عورت کے ہاتھ میں دیکھ کر رک گئی. میرے بچے میں تمہیں ۔
+۔کسی خاص انسان سے ملوانا چاہتا ہوں ۔ یہ انیتا ہیں اُنہوں نے مسکراتے ہوئے کہا ۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
 
-<p>انیتا نے کہا “ہیلو سمبیگائر، آپ کے والد نے مجھے آپ کے بارے میں بہت کچھ بتایا”۔ لیکن اس نے لڑکی کا ہاتھ مسکرایا یا نہیں لیا۔ سمبیگائر کے والد خوش اور حوصلہ افزائی کرتے تھے۔ انہوں نے ان تینوں کے بارے میں بات کی کہ وہ ایک دوسرے کے ساتھ رہتے ہیں، اور ان کی زندگی کتنی اچھی ہوگی۔ انہوں نے کہا، “میرا بچہ، مجھے امید ہے کہ آپ انیتا آپ کی ماں کو قبول کریں گے۔”</p>
+<p>انیتا نے کہا “ہیلو سمبیگائر، آپ کے والد نے مجھے آپ کے بارے میں بہت کچھ بتایا”. اُس نے لڑکی سے ہاتھ ملاتے ہوئے خوشی محسو س نہیں کی. سمبیگائر کے والد خوش  تھے. انہوں نے ان تینوں کے بارے میں بات کی کہ وہ ایک دوسرے کے ساتھ رہیں گے، اور ان کی زندگی کتنی اچھی ہوگی. انہوں نے کہا، “میرا بچہ، مجھے امید ہے کہ آپ انیتا کو آپنی  ماں کے طور پر قبول کریں گی</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/05.jpg" /></p>
 
-<p>سمبیگائر کی زندگی بدل گئی۔ وہ اب اپنے والد کے ساتھ صبح کے وقت بیٹھنے کا وقت نہیں رکھتے تھے۔ انیتا نے اس کے بہت سے گھریلو کاموں کو دے دیا ہے کہ وہ اس کے اسکول کے کام کو شام کے اندر کام کرنے کے لۓ بہت تھکا ہوا تھا۔ وہ رات کے کھانے کے بعد براہ راست بستر پر گئے۔ اس کی صرف آرام دہ اور پرسکون رنگا رنگ کمبل تھی اس کی ماں نے اسے دی۔ سمب گیورائر کے والد نے محسوس نہیں کیا کہ اس کی بیٹی ناخوش تھی۔</p>
+<p>سمبیگائر کی زندگی بدل گئی. اب اُسے اپنے والد کے ساتھ صبح بیٹھنے کا زیادہ وقت نہیں ملتا تھا. انیتا نے اسے بہت سے گھریلو کاموں میں لگا دیا تھا  وہ اتنا تھک جاتی کہ شام میں اپنے سکول کا کام بھی نہ کر پاتی ۔ وہ کھانا
+کھانے کے بعد سیدھا اپنے بستر کی طرف چلی جاتی ۔ اُس کی زندگی میں سکون کی وجہ صرف اُس کی ماں کی طرف سے دیا گیا ایک خوبصورت کمبل تھا ۔ سمبیگائرکے والد اس بات کا اندازہ نہ لگا سکے کہ اُن کی بیٹی نا خوش ہے ۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
 
-<p>چند ماہ کے بعد، سمبیگائر کے والد نے ان سے کہا کہ وہ تھوڑی دیر تک گھر سے دور رہیں گے۔ انہوں نے کہا کہ “مجھے اپنے کام کا سفر کرنا ہے۔” “لیکن میں جانتا ہوں کہ آپ ایک دوسرے کی دیکھ بھال کریں گے۔” سمبیگائر کا چہرہ گر گیا، لیکن اس کے والد نے اطلاع نہیں دی۔ انیتا نے کچھ بھی نہیں کہا۔ وہ یا تو خوش نہیں تھی۔</p>
+<p>چند ماہ کے بعد، سمبیگائر کے والد نے ان سے کہا کہ وہ تھوڑی دیر تک گھر سے دور رہیں گے. انہوں نے کہا کہ “مجھے اپنے کام کے لیے سفر کرنا ہے.” “لیکن میں جانتا ہوں کہ آپ ایک دوسرے کی دیکھ بھال کریں گے.” سمبیگائر کا چہرہ اُتر گیا، لیکن اس کے والد نے غور نہیں کیا. انیتا نے کچھ بھی نہیں کہاوہ بھی نا خوش تھی ۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
 
-<p>سیمبیگائر کے لئے چیزیں خراب ہوگئیں۔ اگر اس نے اپنے کاموں کو ختم نہیں کیا، یا اس نے شکایت کی، انیتا نے اسے مارا۔ اور رات کے کھانے میں، عورت نے سب سے زیادہ کھانا کھایا، سیمبگائر چھوڑ کر صرف چند سکریپوں کے ساتھ۔ ہر رات سمبیگویر نے اپنی ماں کی کمبل کو ہینڈل کرنے کے لئے خود کو سوچا۔</p>
+<p>سیمبیگائر کے لئے صورتحال اور خراب ہوگئ ۔ اگر وہ اپنے کام وقت پر ختم نہ کرتی یا شکایت کرتی تو انیتا اُسے مارتی ۔ اور کھانے کے وقت وہ خود زیا دہ کھاتی اور سمبیگائرکو بچے ہوئے چند ٹکڑے دیتی ۔ ہر رات سمبیگائرسونے سے پہلے روتی اور چلاتی اور اپنی ما ں کے دیے ہوئے کمبل کو کس کے پکڑتی</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/08.jpg" /></p>
 
-<p>ایک صبح، سمب گیویر دیر سے بستر سے نکل رہا تھا۔ “آپ سست لڑکی!” انیتا نے کہا۔ اس نے بستر سے باہر سیمبیگائر باہر نکالا۔ قیمتی کمبل کیل میں پکڑا اور دو میں پھنس گیا۔</p>
+<p>ایک صبح سمبیگائردیر سے اُٹھی ۔ ّسست لڑکیٗ! انیتا چلائی ۔ اُس نے اُسے بستر سے دھکا دے کر نیچے گرایا ۔ قیمتی کمبل کیل سے اٹک کر دو ٹکڑوں میں بٹ گیا</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/09.jpg" /></p>
 
-<p>سیمبیگائر بہت پریشان تھا۔ اس نے گھر سے بھاگنے کا فیصلہ کیا۔ اس نے اپنی ماں کے کمبل کے ٹکڑوں کو لے لیا، کچھ کھانا پکڑا اور گھر چھوڑ دیا۔ اس نے سڑک کے پیچھے اس کے والد کو لے لیا۔</p>
+<p>سیمبیگائر بہت پریشان تھی. اس نے گھر سے بھاگنے کا فیصلہ کیا. اس نے اپنی ماں کے کمبل کے ٹکڑوں کو لے لیا، کچھ کھانا پکڑا اور گھر چھوڑ دیا۔ اُس نے اپنے والد کی اختیار کی گئی سڑک پر چلنا شروع کر دیا</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/10.jpg" /></p>
 
-<p>جب شام آ گیا تو، وہ ایک ندی کے قریب لمبے درخت پر چڑھ کر شاخوں میں خود کے بستر بنا کر۔ جیسا کہ وہ سو گیا تھا، وہ گانا: “ماما، ماما، ماما، آپ نے مجھے چھوڑ دیا۔ تم نے مجھے چھوڑ دیا اور واپس کبھی نہیں آیا۔ والد مجھ سے محبت نہیں کرتا۔ ماں، آپ کب واپس آ رہے ہو؟ آپ نے مجھے چھوڑ دیا۔”</p>
+<p>جب شام ہوئی  تو، وہ ایک ندی کے قریب لمبے درخت پر چڑھ کر شاخوں میں خود اپنا بستر بنا یا. اور گانا گاتے ہوئے سو گئی “ماما، ماما، ماما، آپ نے مجھے چھوڑ دیا. تم نے مجھے چھوڑ دیا اور واپس کبھی نہیں آئی. والد اب مجھ سے محبت نہیں کرتے. ماں، آپ کب واپس آ رہی ہیں؟ آپ نے مجھے چھوڑ دیا.”</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/11.jpg" /></p>
 
-<p>اگلے صبح، سمب گیویر نے گانا دوبارہ گانا شروع کر دیا۔ جب خواتین نے اپنے لباس کو ندی میں دھونے کے لئے آتے ہیں، تو وہ غمگین گانا لمبے درخت سے آ رہے تھے۔ انہوں نے سوچا کہ یہ صرف پتیوں کی پتیوں کو پھیر دیتا ہے، اور ان کے کام کے ساتھ ہوتا ہے۔ لیکن خواتین میں سے ایک نے گانا کو بہت احتیاط سے سن لیا۔</p>
+<p>اگلی صبح، سمب گیویر نے گانا دوبارہ گانا شروع کر دیا. جب خواتین  اپنے لباس  ندی میں دھونے کے لئے آئیں. تو اُنہوں نے غمگین گانے کی آواز
+سُنی۔ جو کہ  لمبے درخت سے آ رہی تھی. انہوں نے سوچا کہ یہ صرف ہو ا سے ہلتے ہوئے پتوں کی آواز ہے اور اپنا کام جاری رکھا ۔ لیکن اُن میں ایک عورت نے غور سے اُس گانے کو سُنا</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
 
-<p>اس عورت نے درخت میں دیکھا۔ جب اس نے لڑکی اور رنگا رنگ کمبل کے ٹکڑوں کو دیکھا، وہ پکارا، “میرے بھائی کے بچے!” سمب گیویر نے۔ “دوسری خواتین نے درخت سے چڑھ کر سمبیگائیر کو دھونے اور مدد کی۔ اس کی چاچی نے چھوٹی لڑکی کو گلے لگایا اور اسے آرام کرنے کی کوشش کی۔</p>
+<p>اس عورت نے درخت میں دیکھا. جب اس نے لڑکی اور رنگا رنگ کمبل کے ٹکڑوں کو پکڑے دیکھا، اُس نے پکارا، “میرے بھائی کی بچی!” باقی عورتوں کپڑے دھونا بند کیا اور سمب گیویر کو درخت سے سے نیچے اُتارنے میں مدد کی ۔ اُس کی آنٹی نے اُسے گلے سے لگایا تاکہ وہ راحت محسوس کرے</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
 
-<p>سمبیگائر کی چاچی نے بچے کو اپنا گھر لے لیا۔ اس نے سیمبیگائر کو گرمی کا کھانا دیا، اور اس کی ماں کی کمبل کے ساتھ بستر میں اسے ٹکرا دیا۔ اس رات، سمبیگویر نے رویا جیسے وہ سو گیا تھا۔ لیکن وہ راحت کے آنسو تھے۔ وہ جانتی تھی کہ اس کی چاچی اس کی دیکھ بھال کرے گی۔</p>
+<p>سمبیگائر کی آنٹی  بچی کو اپنے گھر لے گئی. اس نے سیمبیگائر کو گرم کھانا دیا. اور اس کی ماں کے کمبل کے ساتھ بستر میں سلا دیا. اس رات، سمبیگویر روئی اور سو گئی. لیکن وہ راحت کے آنسو تھے. وہ جانتی تھی کہ اس کی آنٹی اس کی دیکھ بھال کرے گی</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
 
-<p>جب سمبیگائیر کے والد گھر واپس آ گئے تو اس نے اپنا خالی خالی جگہ ملا۔ “کیا ہوا، انیتا؟” اس نے بھاری دل سے پوچھا۔ عورت نے وضاحت کی کہ سمبیگائیر بھاگ گیا ہے۔ انہوں نے کہا کہ “میں چاہتا ہوں کہ وہ مجھ پر احترام کرے۔” “لیکن شاید میں بہت سخت تھا۔” سمبیگائر کے باپ نے گھر چھوڑ دیا اور ندی کی سمت میں چلا گیا۔ انہوں نے اپنی بہن کے گاؤں کو جاری رکھنے کے لئے جاری رکھنا چاہا کہ اس نے سیمبیگائر دیکھا ہو۔</p>
+<p>جب سمبیگائیر کے والد گھر واپس آ گئے تو اسے اپنی بیٹئی کا کمرہ خالی ملا  “کیا ہوا، انیتا؟” اس نے بھاری دل سے پوچھا. عورت نے وضاحت کی کہ سمبیگائیر بھاگ گئی ہے. انہوں نے کہا کہ “میں چاہتا تھی کہ وہ میرا  احترام کرے.” “لیکن شاید میں بہت سخت تھی.” سمبیگائر کے باپ نے گھر چھوڑ دیا اور ندی کی سمت میں چلا گیا. وہ اپنی بہن  کے گاؤں کی طرف چلتے گئے  کہ شائید کسی نے سیمبیگائرکو دیکھا ہو</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/15.jpg" /></p>
 
-<p>جب اس نے اپنے والد کو دور سے دیکھا تو سمب گیویر اپنے کزن کے ساتھ کھیل رہا تھا۔ وہ خوفزدہ تھا کہ وہ ناراض ہوسکتا ہے، لہذا وہ گھر کے اندر چھپے جانے کے لئے بھاگ گیا۔ لیکن اس کے والد اس کے پاس گیا اور کہا، “سمبیگائر، آپ نے خود کو ایک بہترین ماں پایا ہے۔ جو آپ سے پیار کرتا ہے اور آپ کو سمجھتا ہے۔ مجھے تم پر فخر ہے اور میں تم سے پیار کرتا ہوں۔ “انہوں نے اس بات سے اتفاق کیا کہ جب تک وہ چاہتا تھا، سمب گیویر اپنی چاچی سے رہیں گے۔</p>
+<p>جب اس کے والد نے  دور سے دیکھا تو سمب گیویر اپنے کزن کے ساتھ کھیل رہی تھی. وہ خوفزدہ تھی کہ والد ناراض ہوسکتے ہیں، لہذا وہ گھر کے اندر چھپنے کے لیے بھاگ گئی. لیکن اس کے والد اس کے پاس گئے اور کہا، “سمبیگائر، آپ نے اپنے لیے ایک بہترین ماں پائی ہے. جو آپ سے پیار کرتی ہے اور آپ کو سمجھتی ہے. مجھے تم پر فخر ہے اور میں تم سے پیار کرتا ہوں. “انہوں نے اس بات سے اتفاق کیا کہ جب تک وہ چاہتی ہے اپنی آنٹی کے ساتھ رہ سکتی ہے.</p>
 
 <div class="pagenum">14</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
 
-<p>اس کے والد نے ہر روز اس کا دورہ کیا۔ بالآخر وہ انیتا کے ساتھ آئے۔ وہ سمبیگائر کے ہاتھ سے نکل گئے۔ انہوں نے روانہ کیا، “مجھے بہت افسوس ہے، میں غلط تھا۔” “کیا آپ مجھے دوبارہ کوشش کریں گے؟” سمبیگویر نے اپنے والد اور ان کے پریشان کن چہرے کو دیکھا۔ پھر اس نے آہستہ آہستہ آگے بڑھا اور انیتا کے آس پاس اپنے ہاتھوں کو ڈال دیا۔</p>
+<p>اس کے والد نے ہر روز وہاں دورہ کیا. بالآخر وہ انیتا کے ساتھ آئے. وہ سمبیگائر کی طرف بھاگی. انہوں نے کہا. “مجھے بہت افسوس ہے، میں غلط تھی.” “کیا آپ مجھے دوبارہ کوشش کرنے دیں گی؟” سمبیگویر نے اپنے والد اور ان کے پریشان کن چہرے کو دیکھا. پھر اس نے آہستہ آہستہ قدم بڑھایا  اور انیتا کو گلے سے لگا لیا ۔.</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
 
-<p>اگلے ہفتے انیتا سمب گیویر نے ان کے کزن اور چاچی کے ساتھ کھانا کھانے کے لئے مدعو کیا۔ کیا دعوت ہے انیتا نے سمب گیورائر کے پسندیدہ کھانے کی اشیاء تیار کی، اور ہر ایک کھایا جب تک وہ مکمل نہ ہو۔ پھر بچوں نے ادا کیا جبکہ بالغوں نے بات کی۔ سمبیگائر نے خوش اور بہادر محسوس کیا۔ اس نے جلد ہی فیصلہ کیا، جلد ہی، وہ اپنے باپ اور اس کے سوتیلی ماں کے ساتھ رہنے کے لئے گھر واپس آ جائیں گے۔</p>
+<p>اگلے ہفتے انیتا نے سمب گیویرکو اور اس کے کزن کو اوراس کی آنٹی کو اُن کے ساتھ کھانا کھانے کے لئے مدعو کیا. کیا دعوت ہے! انیتا نے سمب گیورائر کے پسندیدہ کھانے  تیار کیے، اور ہر ایک نے خوب کھایا جب تک اُن کا پیٹ نہ بھرا گیا ہو پھر بچوں نے کھیلا جبکہ بالغوں نے بات کی. سمبیگائر نے خوش اور بہادر محسوس کیا. اس نے جلد ہی فیصلہ کیا،کہ وہ  جلد ہی گھر واپس آئے گی اور اپنے باپ اور  سوتیلی ماں کے ساتھ رہے گی.</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Rukia Nantale<br /><strong>Illustrations:</strong> Benjamin Mitchley<br /><strong>Translation:</strong> Samrina Sana<br /><strong>Language:</strong> Urdu</p>
+<p><strong>Text:</strong> Rukia Nantale<br /><strong>Illustrations:</strong> Benjamin Mitchley<br /><strong>Translation:</strong> Shahid Abrar-ul-Hassan<br /><strong>Language:</strong> Urdu</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/simbegwire">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
