--- a/stories/ur/0087_مجھے-پڑھنا-اچھا-لگتا-ہے_slides.html
+++ b/stories/ur/0087_مجھے-پڑھنا-اچھا-لگتا-ہے_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/02.jpg" /></p>
-<p>مجھے پڑھنا اچھا لگتا ہے۔</p>
+<p>مجھے پڑھنا اچھا لگتا ہے</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/03.jpg" /></p>
-<p>میں کون پڑھ سکتا ہوں؟</p>
+<p>میں کس کے لیے پڑھ سکتا ہوں؟</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/04.jpg" /></p>
-<p>میری بہن سو رہی ہے۔</p>
+<p>میری بہن سو رہی ہے</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/05.jpg" /></p>
-<p>میں کس کو پڑھ کے سنا سکتا ہوں؟</p>
+<p>میں کس کے لیے پڑھ سکتا ہوں؟</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/06.jpg" /></p>
-<p>میری والدہ اور نانی مصروف ہیں۔</p>
+<p>میری والدہ اور نانی مصروف ہیں</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/07.jpg" /></p>
-<p>میں کس کو پڑھ کے سنا سکتا ہوں؟</p>
+<p>میں کس کے لیے پڑھ سکتا ہوں؟</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/08.jpg" /></p>
-<p>میرے والد اور دادا مصروف ہیں۔</p>
+<p>میرے والد اور دادا مصروف ہیں</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/09.jpg" /></p>
-<p>میں کس کو پڑھ کے سنا سکتا ہوں؟ میں خود کو پڑھ کےسنا سکتا ہوں!</p>
+<p>!میں کس کے لیے پڑھ سکتا ہوں؟ میں اپنے لیے پڑھ سکتا ہوں</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="مجھے-پڑھنا-اچھا-لگتا-ہے-1">مجھے پڑھنا اچھا لگتا ہے</h2>
-<strong>Text:</strong> Letta Machoga<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<strong>Text:</strong> Letta Machoga<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Shahid Abrar-ul-Hassan<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
