--- a/stories/ur/0095_زاما-عظیم-ہے.html
+++ b/stories/ur/0095_زاما-عظیم-ہے.html
@@ -49,89 +49,89 @@ Michael Oguttu<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/02.jpg" /></p>
 
-<p>میرا چھوٹا بھائی بہت دیر ہو گیا ہے۔ میں جلدی جا رہا ہوں، کیونکہ میں بہت اچھا ہوں!</p>
+<p>میرا چھوٹا بھائی بہت دیر سے سوتا ہے ۔ میں جلدی اُٹھتا ہوں کیونکہ میں عظیم ہوں ۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/03.jpg" /></p>
 
-<p>میں وہی ہوں جو سورج میں دیتا ہے۔</p>
+<p>میں ہی وہ ایک ہوں  جو سورج کی روشنی کو اندر لاتا ہوں</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
 
-<p>ما کہتے ہیں “تم میری صبح ستارے ہو۔”</p>
+<p>ماں کہتی ہیں “تم میری صبح ستارے ہو.”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/05.jpg" /></p>
 
-<p>میں خود کو دھو سکتا ہوں، مجھے کوئی مدد نہیں ہے۔</p>
+<p>میں خود نہا سکتا ہوں. مجھے کسی کی مدد کی ضرورت نہیں ہے ۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/06.jpg" /></p>
 
-<p>میں سرد پانی اور نیلے رنگ کی بدبودار صابن سے نمٹنے کر سکتا ہوں۔</p>
+<p>میں ٹھنڈے پانی اور نیلے خوشبو دار صابن سے نمٹ سکتا ہوں ۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
 
-<p>ما یاد دلاتا ہے، “دانتوں کو مت بھولنا۔” میں جواب دیتا ہوں، “کبھی نہیں، مجھے نہیں!”</p>
+<p>ما ں یاد دلاتی ہیں، “دانتوں کوصاف کرنا مت بھولنا.” میں جواب دیتا ہوں، میں! کبھی نہیں</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/08.jpg" /></p>
 
-<p>دھونے کے بعد، میں دادا اور چاچی سے سلام کرتا ہوں، اور انہیں اچھا دن کی خواہش ہے۔</p>
+<p>نہانے کے بعد میں دادا اور آنٹی سے ملتا ہوں اور اُنہیں اچھے دن کی دُعا دیتا ہوں</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
 
-<p>پھر میں نے خود کو کپڑے پہنچایا، “میں ابھی بڑا ہوں،” میں کہتا ہوں۔</p>
+<p>پھر میں کپڑے پہنتا ہوں، میں اب بڑا ہو گیا ہو ماں! میں نے کہا</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/10.jpg" /></p>
 
-<p>میں اپنے بٹن بند کر سکتا ہوں اور اپنے جوتے بکسوا سکتا ہوں۔</p>
+<p>میں اپنے بٹن بند کر سکتا ہوں اور اپنے جوتے باندھ سکتا ہوں</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/11.jpg" /></p>
 
-<p>اور مجھے یقین ہے کہ تھوڑا بھائی تمام اسکول کی خبریں جانتا ہے۔</p>
+<p>اور مجھے یقین ہے کہ چھوٹا بھائی تمام اسکول کی خبریں جانتا ہے</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/12.jpg" /></p>
 
-<p>کلاس میں میں ہر طرح سے پوری طرح کرتا ہوں۔</p>
+<p>کلاس میں میں ہر طرح سے اچھی کارکردگی کا مظاہرہ کرتا ہوں</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/13.jpg" /></p>
 
-<p>میں ہر روز یہ سب اچھی چیزیں کرتا ہوں۔ لیکن جو چیز مجھے پسند ہے وہ کھیلنے اور کھیلنے کے لئے ہے!</p>
+<p>میں ہر روز یہ سب اچھی چیزیں کرتا ہوں. لیکن جو چیز مجھے بہت پسند ہے وہ ہے کھیلنا اور صرف کھیلنا</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Michael Oguttu<br /><strong>Illustrations:</strong> Vusi Malindi<br /><strong>Translation:</strong> Samrina Sana<br /><strong>Language:</strong> Urdu</p>
+<p><strong>Text:</strong> Michael Oguttu<br /><strong>Illustrations:</strong> Vusi Malindi<br /><strong>Translation:</strong> Shahid Abrar-ul-Hassan<br /><strong>Language:</strong> Urdu</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/zama-great">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
