--- a/stories/ur/0112_میرا-جسم.html
+++ b/stories/ur/0112_میرا-جسم.html
@@ -49,61 +49,61 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>اردو</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/02.jpg" /></p>
 
-<p>میں اس کے ساتھ چل سکتا ہوں۔</p>
+<p>میں اس کے ساتھ بھاگ سکتا ہوں</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/03.jpg" /></p>
 
-<p>میں اس کے ساتھ کود سکتا ہوں۔</p>
+<p>میں اس کے ساتھ چھلانگ لگا سکتا ہوں</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/04.jpg" /></p>
 
-<p>میں اس کے ساتھ رقص کرسکتا ہوں۔</p>
+<p>میں اس کے ساتھ ناچ سکتا ہوں</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/05.jpg" /></p>
 
-<p>میں اس کے ساتھ تیر کر سکتا ہوں۔</p>
+<p>میں اس کے ساتھ تیرسکتا ہوں</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/06.jpg" /></p>
 
-<p>میں اس کے ساتھ چھوڑ سکتا ہوں۔</p>
+<p>میں اس کے ساتھ رسی پھلانگ سکتا ہوں</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/07.jpg" /></p>
 
-<p>میں اس کے ساتھ لینا چاہتا ہوں۔</p>
+<p>میں اس کے ساتھ لات مار سکتا ہوں</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/08.jpg" /></p>
 
-<p>میں اس سے بچ سکتا ہوں۔</p>
+<p>میں اس کے ساتھ چھپ کے بھاگ سکتا ہوں</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/09.jpg" /></p>
 
-<p>لیکن میں اس سے کبھی پرواز نہیں کر سکتا۔</p>
+<p>لیکن میں اس کے ساتھ کبھی اُڑ نہیں سکتا</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrations:</strong> Mlungisi Dlamini<br /><strong>Translation:</strong> Samrina Sana<br /><strong>Language:</strong> Urdu</p>
+<p><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrations:</strong> Mlungisi Dlamini<br /><strong>Translation:</strong> Shahid Abrar-ul-Hassan<br /><strong>Language:</strong> Urdu</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/my-body">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
