--- a/stories/ur/0112_میرا-جسم_slides.html
+++ b/stories/ur/0112_میرا-جسم_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/02.jpg" /></p>
-<p>میں اس کے ساتھ چل سکتا ہوں۔</p>
+<p>میں اس کے ساتھ بھاگ سکتا ہوں</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/03.jpg" /></p>
-<p>میں اس کے ساتھ کود سکتا ہوں۔</p>
+<p>میں اس کے ساتھ چھلانگ لگا سکتا ہوں</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/04.jpg" /></p>
-<p>میں اس کے ساتھ رقص کرسکتا ہوں۔</p>
+<p>میں اس کے ساتھ ناچ سکتا ہوں</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/05.jpg" /></p>
-<p>میں اس کے ساتھ تیر کر سکتا ہوں۔</p>
+<p>میں اس کے ساتھ تیرسکتا ہوں</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/06.jpg" /></p>
-<p>میں اس کے ساتھ چھوڑ سکتا ہوں۔</p>
+<p>میں اس کے ساتھ رسی پھلانگ سکتا ہوں</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/07.jpg" /></p>
-<p>میں اس کے ساتھ لینا چاہتا ہوں۔</p>
+<p>میں اس کے ساتھ لات مار سکتا ہوں</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/08.jpg" /></p>
-<p>میں اس سے بچ سکتا ہوں۔</p>
+<p>میں اس کے ساتھ چھپ کے بھاگ سکتا ہوں</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/09.jpg" /></p>
-<p>لیکن میں اس سے کبھی پرواز نہیں کر سکتا۔</p>
+<p>لیکن میں اس کے ساتھ کبھی اُڑ نہیں سکتا</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="میرا-جسم-1">میرا جسم</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Mlungisi Dlamini<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Mlungisi Dlamini<br> <strong>Translation:</strong> Shahid Abrar-ul-Hassan<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
