--- a/stories/ur/0271_دو.html
+++ b/stories/ur/0271_دو.html
@@ -49,7 +49,7 @@ Carole Bloch<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/02.jpg" /></p>
 
-<p>دو چھوٹے ہاتھ پکڑنے کے لئے۔</p>
+<p>پکڑنے کے لیے دو چھوٹے ہاتھ ۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -61,7 +61,7 @@ Carole Bloch<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/04.jpg" /></p>
 
-<p>لات مارنادو پاؤں۔</p>
+<p>لات مارنے کے لیے دو چھوٹے پاوں ۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -73,7 +73,7 @@ Carole Bloch<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/06.jpg" /></p>
 
-<p>دیکھنے کے لئے دو چھوٹی آنکھیں۔</p>
+<p>دیکھنے کے لیے دو چھوٹی آنکھیں ۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -85,7 +85,7 @@ Carole Bloch<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/08.jpg" /></p>
 
-<p>سننے کے لئے دو چھوٹے کان۔</p>
+<p>سننے کے لیے دو چھوٹے کان ۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -97,7 +97,7 @@ Carole Bloch<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/10.jpg" /></p>
 
-<p>دو بازو کو گلے لگانا۔</p>
+<p>اور گلے لگانے کے لیے دو پیارے بازو۔</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -107,7 +107,7 @@ Carole Bloch<br>اردو</div><div class="pagebreak">
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Carole Bloch<br /><strong>Illustrations:</strong> Richard MacIntosh<br /><strong>Translation:</strong> Samrina Sana<br /><strong>Language:</strong> Urdu</p>
+<p><strong>Text:</strong> Carole Bloch<br /><strong>Illustrations:</strong> Richard MacIntosh<br /><strong>Translation:</strong> Shahid Abrar-ul-Hassan<br /><strong>Language:</strong> Urdu</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/two">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
