--- a/stories/ur/0271_دو_slides.html
+++ b/stories/ur/0271_دو_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/02.jpg" /></p>
-<p>دو چھوٹے ہاتھ پکڑنے کے لئے۔</p>
+<p>پکڑنے کے لیے دو چھوٹے ہاتھ ۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -114,7 +114,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/04.jpg" /></p>
-<p>لات مارنادو پاؤں۔</p>
+<p>لات مارنے کے لیے دو چھوٹے پاوں ۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -131,7 +131,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/06.jpg" /></p>
-<p>دیکھنے کے لئے دو چھوٹی آنکھیں۔</p>
+<p>دیکھنے کے لیے دو چھوٹی آنکھیں ۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -148,7 +148,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/08.jpg" /></p>
-<p>سننے کے لئے دو چھوٹے کان۔</p>
+<p>سننے کے لیے دو چھوٹے کان ۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -165,7 +165,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/10.jpg" /></p>
-<p>دو بازو کو گلے لگانا۔</p>
+<p>اور گلے لگانے کے لیے دو پیارے بازو۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -182,7 +182,7 @@
 <section class="slide level1">
 
 <h2 id="دو-1">دو</h2>
-<strong>Text:</strong> Carole Bloch<br> <strong>Illustrations:</strong> Richard MacIntosh<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<strong>Text:</strong> Carole Bloch<br> <strong>Illustrations:</strong> Richard MacIntosh<br> <strong>Translation:</strong> Shahid Abrar-ul-Hassan<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
