--- a/stories/ur/0302_آگ.html
+++ b/stories/ur/0302_آگ.html
@@ -49,56 +49,56 @@ Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>اردو</div><d
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/02.jpg" /></p>
 
-<p>دیکھو، آگ!</p>
+<p>!دیکھو آگ</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/03.jpg" /></p>
 
-<p>آگ جلاتی ھے۔</p>
+<p>آگ جلتی ہے ۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/04.jpg" /></p>
 
-<p>آگ کھانا پکاتی ھے۔</p>
+<p>کھانا پکتا ہے ۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/05.jpg" /></p>
 
-<p>آگ تپش دیتی ھے۔</p>
+<p>آگ حرارت دیتی ہے ۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/06.jpg" /></p>
 
-<p>آگ روشنی دیتی ھے۔</p>
+<p>آگ روشنی دیتی ہے ۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/07.jpg" /></p>
 
-<p>دیکھو، آگ!</p>
+<p>!دیکھو. آگ</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/08.jpg" /></p>
 
-<p>آگ بھترین ھے۔</p>
+<p>آگ خوبصورت ہے ۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/09.jpg" /></p>
 
-<p>اور یھ بھت طاقتور ھے۔</p>
+<p>اور یہ طاقتور ہے ۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
