--- a/stories/ur/0342_سزا_slides.html
+++ b/stories/ur/0342_سزا_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
-<p>ایک دن، ماما نے بہت پھل لیا۔</p>
+<p>ایک دن امی بہت سے پھل لائیں ۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
-<p>&quot;ہم کب کچھ پھل سکتے ہیں؟&quot; ہم نے پوچھا۔ ماما کا کہنا ہے کہ &quot;آج ہم پھل کھائیں گے۔&quot;</p>
+<p>ہم کچھ پھل کب کھا سکتے ہیں؟ ہم نے پوچھا ۔ ہم آج رات کو پھل کھائیں گے ۔ امی نے کہا ۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
-<p>میرا بھائی رحیم لالچی ہے۔ وہ سب پھل چکھاتا ہے۔ وہ بہت کھاتا ہے۔</p>
+<p>میرا بھائی رحیم لالچی ہے ۔ وہ سب پھل چکھتا ہے۔ وہ بہت پھل کھاتا ہے ۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
-<p>&quot;رحیم نے کیا کیا دیکھو!&quot; میرے چھوٹے بھائی کو۔ &quot;رحیم شرارتی اور خود مختار ہے،&quot; میں کہتا ہوں۔</p>
+<p>ریکھو رحیم نے کیا کیا؟ میرا چھوٹا بھائی چلایا ۔ رحیم بہت شرارتی اور خود غر ض ہے ۔ میں نے کہا ۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/06.jpg" /></p>
-<p>ماں رحیم سے ناراض ہیں</p>
+<p>امی رحیم سے ناراض ہیں ۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
-<p>ہم رحیم سے ناراض ہیں۔ لیکن رحیم افسوس نہیں ہے۔</p>
+<p>ہم بھی رحیم سے ناراض ہیں لیکن رحیم تھوڑا سا بھی شرمندہ نہیں ہے ۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
-<p>&quot;کیا تم رحیم کو سزا نہیں دے رہے ہو؟&quot; تھوڑا بھائی سے پوچھتا ہے</p>
+<p>کیا تم رحیم کو سزا نہیں دے رہے؟ چھوٹے بھائی نے پوچھا ۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
-<p>ماں نے خبردار کیا &quot;رحیم، جلد ہی آپ کو معافی مانگیں گے۔&quot;</p>
+<p>ماں نے خبردار کیا &quot;رحیم، جلد ہی آپ سے معافی مانگے گا۔.&quot;</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/10.jpg" /></p>
-<p>رحیم بیمار محسوس کرنے لگتے ہیں۔</p>
+<p>رحیم بیمار محسوس کرنے لگتا ہے</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
-<p>رحیم کا کہنا ہے کہ &quot;میرا پیٹ بہت گستاخ ہے۔&quot;</p>
+<p>میرے پیٹ میں درد ہے ۔ رحیم چلایا ۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
-<p>ماں جانتا تھا کہ یہ ہوگا۔ پھل رحیم کو سزا دے رہا ہے!</p>
+<p>امی جانتی تھیں کہ یہ ہو گا ۔ پھل رحیم کو سزا دے رہے ہیں ۔</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
-<p>بعد میں، رحیم ہمیں افسوس ہے۔ &quot;میں کبھی کبھی لالچی نہیں کروں گا،&quot; انہوں نے وعدہ کیا۔ اور ہم سب اس پر یقین رکھتے ہیں۔</p>
+<p>بعد میں رحیم معافی مانگی ۔ میں کبھی دوبارہ لالچ نہیں کروں گا اُس نے وعدہ کیا ۔ اور ہم سب نے اُس پر بھروسہ کر لیا ۔</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="سزا-1">سزا</h2>
-<strong>Text:</strong> Adelheid Marie Bwire<br> <strong>Illustrations:</strong> Melany Pietersen<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<strong>Text:</strong> Adelheid Marie Bwire<br> <strong>Illustrations:</strong> Melany Pietersen<br> <strong>Translation:</strong> Shahid Abrar-ul-Hassan<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
